# internal/dal/db/model/company.gen.go
@@ -1,0 +1,19 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+const TableNameCompany = "company"
+
+// Company mapped from table <company>
+type Company struct {
+	Name          string `gorm:"column:name;type:varchar(100);not null" json:"name"`
+	WalletAddress string `gorm:"column:wallet_address;type:varchar(100);not null" json:"wallet_address"`
+	ID            int64  `gorm:"column:id;type:bigint;primaryKey;autoIncrement:true" json:"id"`
+}
+
+// TableName Company's table name
+func (*Company) TableName() string {
+	return TableNameCompany
+}
