# openapi.yaml
@@ -3,21 +3,19 @@
 
 openapi: 3.0.3
 info:
-    title: Greeter API
-    description: The greeting service definition.
+    title: CompanyService API
     version: 0.0.1
 paths:
-    /v1/helloworld:
+    /v1/companies:
         get:
             tags:
-                - Greeter
-            description: Sends a greeting
-            operationId: Greeter_SayHello
+                - CompanyService
+            operationId: CompanyService_ListCompany
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/HelloRequest'
+                            $ref: '#/components/schemas/ListCompanyRequest'
                 required: true
             responses:
                 "200":
@@ -25,7 +23,154 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/HelloReply'
+                                $ref: '#/components/schemas/ListCompanyReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/companies/address/{wallet_address}:
+        get:
+            tags:
+                - CompanyService
+            operationId: CompanyService_GetCompanyByAddress
+            parameters:
+                - name: wallet_address
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/GetCompanyByAddressRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetCompanyReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/companies/create:
+        post:
+            tags:
+                - CompanyService
+            operationId: CompanyService_CreateCompany
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateCompanyRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateCompanyReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/companies/delete/{id}:
+        post:
+            tags:
+                - CompanyService
+            operationId: CompanyService_DeleteCompany
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int32
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/DeleteCompanyRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/DeleteCompanyReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/companies/update/{id}:
+        post:
+            tags:
+                - CompanyService
+            operationId: CompanyService_UpdateCompany
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int32
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UpdateCompanyRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UpdateCompanyReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/companies/{id}:
+        get:
+            tags:
+                - CompanyService
+            operationId: CompanyService_GetCompany
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int32
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/GetCompanyRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetCompanyReply'
                 default:
                     description: Default error response
                     content:
@@ -34,6 +179,47 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
+        CreateCompanyReply:
+            type: object
+            properties:
+                id:
+                    type: string
+                name:
+                    type: string
+                walletAddress:
+                    type: string
+        CreateCompanyRequest:
+            type: object
+            properties:
+                name:
+                    type: string
+                walletAddress:
+                    type: string
+                logoUrl:
+                    type: string
+        DeleteCompanyReply:
+            type: object
+            properties: {}
+        DeleteCompanyRequest:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int32
+        GetCompanyByAddressRequest:
+            type: object
+            properties:
+                walletAddress:
+                    type: string
+        GetCompanyReply:
+            type: object
+            properties: {}
+        GetCompanyRequest:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int32
         GoogleProtobufAny:
             type: object
             properties:
@@ -42,18 +228,12 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        HelloReply:
+        ListCompanyReply:
             type: object
-            properties:
-                message:
-                    type: string
-            description: The response message containing the greetings
-        HelloRequest:
+            properties: {}
+        ListCompanyRequest:
             type: object
-            properties:
-                name:
-                    type: string
-            description: The request message containing the user's name.
+            properties: {}
         Status:
             type: object
             properties:
@@ -70,5 +250,14 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UpdateCompanyReply:
+            type: object
+            properties: {}
+        UpdateCompanyRequest:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int32
 tags:
-    - name: Greeter
+    - name: CompanyService
